# dvnetos

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile.test  README.md  notes.md
.github/scripts/: deps.sh
.github/workflows/: pipeline.yml
CMake/: FindClang.cmake  arch-alias.cmake  bin2h.cmake  clean-coverage-files.cmake.in  commit-hook.cmake  configure-test.cmake  enum2string.cmake  find-libclang.cmake.in  pre-commit.sh  toolchain.cmake.in  utils.cmake
image/: CMakeLists.txt  kernel-boots.py
kernel/: CMakeLists.txt  link.ld  main.cpp
kernel/arch/: CMakeLists.txt
kernel/arch/aarch64/: CMakeLists.txt  config.txt  linker.ld
kernel/arch/aarch64/memory/: CMakeLists.txt  paging.cpp  paging.h
kernel/arch/aarch64/serial/: CMakeLists.txt  Serial.cpp  Serial.h
kernel/arch/x86_64/: CMakeLists.txt  linker.ld
kernel/arch/x86_64/memory/: CMakeLists.txt  paging.cpp  paging.h
kernel/arch/x86_64/serial/: CMakeLists.txt  Serial.cpp  Serial.h
kernel/framebuffer/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  VirtualConsole.cpp  VirtualConsole.h  font.h  framebuffer_test.cpp
kernel/include/: CMakeLists.txt  alloca.h  cstddef  cstdint  memutil.h  stdarg.h  stddef.h  stdint.h  stdio.h  string.h  type_traits
kernel/include/__type_traits/: CMakeLists.txt  integral_constant.h  is_arithmetic.h  is_floating_point.h  is_integral.h  is_same.h  is_signed.h  remove_cv.h
kernel/memory/: CMakeLists.txt  MemMap.cpp  MemMap.h  get-page.cpp  get-page.h  memalloc.cpp  memalloc.h  memalloc_test.cpp
kernel/smbios/: CMakeLists.txt  smbios.cpp  smbios.h  smbios_tostring.cpp  smbios_tostring.h
kernel/utils/: CMakeLists.txt  bytes.cpp  bytes.h  cstring.cpp  debug.h  inttostring.cpp  inttostring.h  panic.cpp  panic.h  stdio.cpp  stdio_test.cpp
tools/: CMakeLists.txt  enumToString.py  pyproject.toml
tools/src/warningcollector/: __init__.py
